# bt_api_yobit

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
src/bt_api_yobit/: __init__.py  plugin.py  registry_registration.py
src/bt_api_yobit/configs/: yobit.yaml
src/bt_api_yobit/containers/tickers/: __init__.py  yobit_ticker.py
src/bt_api_yobit/errors/: __init__.py
src/bt_api_yobit/exchange_data/: __init__.py
src/bt_api_yobit/feeds/live_yobit/: request_base.py  spot.py
src/bt_api_yobit/tickers/: __init__.py
tests/: conftest.py  test_yobit_ticker.py
tests/containers/exchanges/: test_yobit_exchange_data.py
tests/containers/tickers/: test_yobit_ticker.py
tests/exchange_registers/: test_register_yobit.py
tests/feeds/: test_valr_wazirx_yobit_request_data.py
